<resources>
    <string name="app_name">Newsman</string>


    <string name="news_card_date">Post date:</string>
    <string name="news_card_news_updating_user">Last update by:</string>

    <string name="create_news_chose_background_image_button">Set background image</string>
    <string name="create_news_add_image">Add image to news</string>
    <string name="create_news_title_hint">Insert News title</string>
    <string name="create_news_content">Insert content text</string>
    <string name="create_news_post_news_button">Post news</string>
    <string name="create_news_cancel_button">Cancel</string>
    <string name="create_news_toast_message">News must have at least title and content to be created!</string>

    <string name="action_subscribe_to_news">Subscribe to news</string>
    <string name="action_create_new_news">Create news</string>
    <string name="action_unsubscribe_from_news">Unsubscribe from news</string>
    <string name="subscribe_error">News not found error</string>
    <string name="action_update_news">Update news</string>
    <string name="action_delete_news">Delete news</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_by_date">By post date</string>
    <string name="action_sort_by_title">By news title</string>
    <string name="action_sort_by_user">By user</string>
    <string name="action_login">Login</string>
    <string name="action_user_account">User</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="news_display_pictures_title">Pictures:</string>
    <string name="news_display_comments_title">Comments:</string>
    <string name="news_display_create_picture">Add picture</string>

    <string name="comment_item_date_text">Post date:  </string>

    <string name="create_comment_post_button_text">Post comment</string>
    <string name="create_comment_content_hint">Insert comment text</string>

    <string name="create_picture_name_hint">Insert picture name</string>
    <string name="create_picture_description_hint">Insert picture description</string>
    <string name="create_picture_post_button">Post picture</string>
    <string name="create_picture_cancel_button">Cancel</string>
    <string name="create_picture_capture_button">Capture with camera</string>
    <string name="create_picture_pick_from_gallery_button">Pick from gallery</string>
    <string name="create_picture_validation_toast">Picture must be set</string>

    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_btn">Login</string>
    <string name="confirm_password_placeholder">Confirm password</string>
    <string name="create_account_btn">Create account</string>

    <string name="login_invalid_toast">"Invalid username or password!"</string>
    <string name="create_account_invalid_toast">Invalid username or password!\n
        Password and confirm password must match</string>
    <string name="create_comment_invalid_comment_toast">Comment must have some text!</string>
    <string name="create_account_success_toast">Account successfully created</string>
    <string name="create_account_fail_toast">Already exists user with that username!</string>
    <string name="login_successful_toast">Login successful!</string>
    <string name="subscribe_toast">Successfully subscribed</string>
    <string name="unsubscribe_toast">Successfully unsubscribed</string>


    <string name="title_activity_login2">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings_ip_adr_hint">IP Address</string>
    <string name="action_save_news">Save news</string>
    <string name="news_list_button_text">News list</string>
    <string name="set_ip_address_btn">Set IP address</string>

    <string name="pref_ip">192.168.1.7</string>
    <string name="pref_ip_key">ip_address</string>
    <string name="pref_ip_title">Ip address</string>

    <string name="notification_channel_name">News channel</string>

</resources>
